[package]
name = "thenewsapi"
version = "0.1.0"
authors = ["Rishabh Bector"]
edition = "2018"
description = "A client library for interacting with The News API, a free service providing access to global news from thousands of sources."
documentation = "https://docs.rs/news_api_client"
repository = "https://github.com/rishabh-bector/thenewsapi"
readme = "README.md"
keywords = ["news", "api", "client", "thenewsapi", "newsapi"]
categories = ["api-bindings", "network-programming"]
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/rishabh-bector/thenewsapi"

[dependencies]
anyhow = "1.0"
reqwest = { version = "=0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
